# diploma

./: .gitignore  CMakeLists.txt  README.md
data/: 13.txt  14.txt  apogee-rc-DR13_t1.txt
results/: clean.sh  plt.sh
results/cds/: run.sh
results/defense/: article_nii_R.sty  diploma.bbl  diploma.tex  latex_nii_R.sty  matmex-diploma-custom.cls  present.tex
results/imgs/: conclusions.txt
results/l_part/: run.sh
results/l_part/1/: R0Theta0.txt  R0Theta0_main.txt  err_xyz.txt  l_objs.txt  l_objs_err.txt  l_profile.txt  result.txt  rotc.txt  sun.txt  unfresult.txt
results/l_part/10/: R0Theta0.txt  R0Theta0_main.txt  err_xyz.txt  l_objs.txt  l_profile.txt  missing_xyz.txt  r0_bounds.txt  result.txt  rotc.txt  sun.txt  unfresult.txt
results/l_part/2/: R0Theta0.txt  R0Theta0_main.txt  err_xyz.txt  final_xyz.txt  l_objs.txt  l_objs_err.txt  l_profile.txt  result.txt  rotc.txt  sun.txt  unfresult.txt
results/l_part/3/: R0Theta0.txt  R0Theta0_main.txt  err_xyz.txt  l_objs.txt  l_objs_err.txt  l_profile.txt  result.txt  rotc.txt  sun.txt  unfresult.txt
results/l_part/4/: R0Theta0.txt  R0Theta0_main.txt  err_xyz.txt  final_xyz.txt  l_objs.txt  l_objs_err.txt  l_profile.txt  result.txt  rotc.txt  sun.txt  unfresult.txt
results/l_part/5/: R0Theta0.txt  R0Theta0_main.txt  err_xyz.txt  final_xyz.txt  l_objs.txt  (+6 more)
results/l_part_hsoy/: run.sh  show.sh
results/vr_part/: rerr  res  run.sh  show.sh  tmp
sources/comparing_distance_scale/: cds_core.py  cds_io.py  cds_types.py  main.py
sources/core/: core.c  core.h  core_b.c  core_l.c  core_vr.c  db.c  init.c  opt.c  parser.c  united_solution.c  utils.c
sources/debug/: debug.c
sources/generators/: names.c  samples.c
sources/graph/: graph.c
sources/include/: asserts.h  core.h  core_b.h  core_l.h  core_vr.h  db.h  debug.h  filter.h  generators.h  graph.h  init.h  io.h  jtest.h  math.h  mem.h  opt.h  sched.h  trigonometry.h  types.h  unicore.h  utils.h
sources/io/: io.c
sources/jtests/: core.c  io.c  io_test.txt  main.c  math.c  memory.c
sources/math/: math.c  trigonometry.c
sources/mem/: memory.c
sources/scripts/: AR0.gnu  R0Theta0.gnu  b.gnu  background.gnu  cds.gnu  cds_without_ej.gnu  cur_plot.py  extract.py  l.gnu  lb.gnu  main.gnu  main_cmd.gnu  main_cmd_test.gnu  make_table.py  plottest.py  r_0.gnu  sigma.gnu  view.py  vr.gnu  walker.py  xy.gnu  xz.gnu  yz.gnu
(+280 files in other folders)
