cmake_minimum_required(VERSION 3.5)
project(diploma)
set(SRC_LIST sources/core/db.c sources/generators/names.c sources/core/init.c sources/generators/samples.c sources/core/parser.c sources/graph/graph.c sources/core/core_vr.c sources/core/utils.c sources/core/core_b.c sources/core/united_solution.c sources/core/core_l.c sources/core/opt.c sources/math/trigonometry.c sources/core/core.c sources/io/io.c sources/debug/debug.c sources/math/math.c sources/mem/memory.c)
set(LIBS ${LIBS} ${GSL_LIBRARIES})
add_definitions(-Wall -Wformat=2 -Wfloat-equal -Wconversion -Wshift-overflow -Wduplicate-enum -Wno-implicit-function-declaration -Wno-unused-function -Wshadow -O2 -g)
find_package(GSL REQUIRED)
include_directories("sources/include/" ${GSL_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} ${LIBS} m)
